Get STS creds to publish
