# server/src/main/kotlin/github/joeyslalom/bootvault/rest/VaultController.kt
@@ -1,6 +1,7 @@
 package github.joeyslalom.bootvault.rest
 
-import github.joeyslalom.bootvault.rest.api.StsApi
+import github.joeyslalom.bootvault.SnsVaultProps
+import github.joeyslalom.bootvault.rest.api.AwsApi
 import github.joeyslalom.bootvault.rest.api.TransitApi
 import org.slf4j.LoggerFactory
 import org.springframework.http.ResponseEntity
@@ -9,12 +10,21 @@ import org.springframework.vault.core.VaultOperations
 import org.springframework.web.bind.annotation.PathVariable
 import org.springframework.web.bind.annotation.RequestBody
 
-@Controller
-class VaultController {
-}
 
 @Controller
-class StsController : StsApi
+class AwsController(private val snsVaultProps: SnsVaultProps) : AwsApi {
+    private val log = LoggerFactory.getLogger(AwsController::class.java)
+
+    override fun getSnsCreds(): ResponseEntity<Void> {
+        val credentials = snsVaultProps.credentials()
+        log.info("""copy and paste SNS creds below
+export AWS_ACCESS_KEY_ID=${credentials.accessKey}
+export AWS_SECRET_ACCESS_KEY=${credentials.secretKey}
+export AWS_SESSION_TOKEN=${credentials.securityToken}
+""")
+        return ResponseEntity.noContent().build()
+    }
+}
 
 @Controller
 class TransitController(private val vaultOps: VaultOperations) : TransitApi {
